<resources>
    <string name="app_name">WiFiApp</string>
    <string name="wifi_scan">ビューの更新</string>
    <string name="btn_ser_start">ログ取得開始</string>
    <string name="btn_ser_stop">ログ取得停止</string>
    <string name="tv_warning">Wifiと位置情報の設定をオンにしてください。
        \nWifiスキャンを行うために、アプリを開いている時は画面を常時点灯するように設定してあります。</string>
    <string name="btn_mailSetting">設定</string>
    <string name="tv_mailAddress">送信元メールアドレス</string>
    <string name="tv_password">送信元メールアドレスパスワード</string>
    <string name="tv_atesaki">送信先メールアドレス</string>
    <string name="send_interval">メールの送信間隔</string>
    <string name="send_file_info">送信ファイルの情報</string>
    <string name="search_file">添付ファイルの検索</string>
    <string name="minute">分</string>
    <string name="btn_send_once">1回送信</string>
    <string name="btn_send_repeat">繰り返し送信</string>
    <string name="btn_save">入力値を保存</string>
    <string name="bs_dialog_message">アプリを終了しますか</string>
    <string name="bs_dialog_yes">はい</string>
    <string name="bs_dialog_no">いいえ</string>
    <string name="checkbox_timer">ログ取得する時間を指定する</string>
    <string name="op_menu1">メール設定</string>
    <string name="op_menu2">タイマー設定</string>
    <string name="op_menu3">測定項目設定</string>
    <string name="tv_attention">Wifiと位置情報の設定をオンにしてください。\nWifiスキャンを行うために、アプリを開いている時は画面を常時点灯するように設定してあります。</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_wifi">Wi-Fi</string>
    <string name="tab_BT">BT</string>
    <string name="tab_BLE">BLE</string>
    <string name="tab_cell">Cell</string>
    <string name="tab_battery">BAT</string>
    <string name="tv_time">時刻を入力</string>
    <string name="tv_start_time">ログ取得開始時刻</string>
    <string name="tv_stop_time">ログ取得終了時刻</string>
</resources>