<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical">

    <TextView
        android:text="@string/tv_mailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_motoAdress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />
    <TextView
        android:text="@string/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_motoPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    <TextView
        android:text="@string/tv_atesaki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edit_atesakiAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />
    <TextView
        android:text="@string/send_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_send_interval"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <TextView
            android:text="@string/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_file_info"/>
    <Button
        android:id="@+id/btn_search_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_file"/>
    <TextView
        android:id="@+id/tv_filepass_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_save_inputs"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/btn_save"/>

    <LinearLayout
        android:layout_marginTop="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_send_once"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_once"
            />
        <Button
            android:id="@+id/btn_send_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:text="@string/btn_send_repeat"/>

    </LinearLayout>


</LinearLayout>
